# MachineLearning1

./: pyproject.toml  readme.md
code/: model_BY.joblib  model_Reg.joblib  modelo.ipynb
