[tool.poetry]
name = "ml1"
version = "0.1.0"
description = "poerty_instalacion"
authors = ["JSebastian N <jnarvae90801@universidadean.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
